Container snapshot and push image
